Tuning and bug fixing.

--- a/server/etc/config-default.ini
+++ b/server/etc/config-default.ini
@@ -17,7 +17,7 @@ pidFile: var/server.pid
 binDir: bin
 contentDir: ../client/dist
 listenAddress: 0.0.0.0
-listenPort: 80
+listenPort: 8080
 developmentMode: false
 socketIODebug: false
 configCheckInterval: 2
@@ -31,7 +31,7 @@ parentalCodeFile: var/parentalCode
 favoriteDrinkCount: 20
 drinkOrderCheckInterval: 5
 idleAudioInterval: 60
-idleAudioChance: 0.5
+idleAudioChance: 0.3
 
 [wifi]
 interface: wlan0
@@ -74,9 +74,13 @@ fileCheckInterval: 5
 phrasesMap: true
 purgePhrases: true
 inProcessTTS: false
+
+[googleTTS]
 googleApplicationCredentials: ~/.google/appCredentials.json
-googleTTSLanguageCode: en-GB
-googleTTSVoiceName: en-GB-Standard-C
+languageCode: en-AU
+name: en-AU-Wavenet-A
+pitch: 0
+speakingRate: 1.2
 
 [pumps]
 count: 16
