--- a/server/etc/config-default.ini
+++ b/server/etc/config-default.ini
@@ -39,7 +39,7 @@ checkInterval: 10
 wpaSupplicantFile: /etc/wpa_supplicant/wpa_supplicant.conf
 
 [serial]
-port: /dev/ttyS0
+port: /dev/ttyACM0
 speed: 115200
 
 [client]
@@ -58,13 +58,13 @@ drinkSizeLimit: 474
 
 [lights]
 enabled: true
-startupPattern: 1:2:3:4,1,2,30:30:30,0,20,7
-shutdownPattern: 1:2:3:4,1,2,30:30:30,0,20,7
-restartPattern: 1:2:3:4,1,2,30:30:30,0,20,7
+startupPattern:         1:2:3:4,1,2,30:30:30,0,20,7
+shutdownPattern:        1:2:3:4,1,2,30:30:30,0,20,7
+restartPattern:         1:2:3:4,1,2,30:30:30,0,20,7
 waitForDispensePattern: 1:2:3:4,1,2,0:0:30,0,20,7
 startDispensePattern: 0,3,5,0
 glassRemovedDispensePattern: 1:2:3:4,1,2,30:0:0,0,10,7
-endDispensePattern: 1:2:3:4,0,0:30:0,10,3
+endDispensePattern:     1:2:3:4,0,0:30:0,10,3
 
 [audio]
 enabled: true
