--- a/server/etc/config-default.ini
+++ b/server/etc/config-default.ini
@@ -21,6 +21,7 @@ listenPort: 8080
 developmentMode: false
 socketIODebug: false
 configCheckInterval: 2
+shutdownTimer: 20
 
 [core]
 restartCommand: sudo shutdown -r now
