--- a/server/etc/config-default.ini
+++ b/server/etc/config-default.ini
@@ -3,6 +3,7 @@
 dbFile: var/barbot.db
 
 [logging]
+console: false
 logLevel: INFO
 logFile: var/barbot.log
 logFormat: %(asctime)s [%(threadName)s] [%(name)s] [%(levelname)s]: %(message)s
@@ -13,12 +14,11 @@ level.engineio = WARNING
 level.werkzeug = WARNING
 
 [server]
-pidFile: var/server.pid
+pidFile: var/barbot.pid
 binDir: bin
 contentDir: ../client/dist
 listenAddress: 0.0.0.0
 listenPort: 8080
-developmentMode: false
 socketIODebug: false
 configCheckInterval: 2
 
