Better serial command handling

--- a/server/etc/config-default.ini
+++ b/server/etc/config-default.ini
@@ -41,6 +41,7 @@ wpaSupplicantFile: /etc/wpa_supplicant/wpa_supplicant.conf
 [serial]
 port: /dev/ttyACM0
 speed: 115200
+retries: 2
 
 [client]
 appTitle: Barbot
