--- a/server/etc/config-default.ini
+++ b/server/etc/config-default.ini
@@ -54,7 +54,6 @@ restartRequiresAdmin: false
 shutdownRequiresAdmin: false
 settingsRequiresAdmin: false
 pumpSetupRequiresAdmin: false
-; Limit total ingredients to 473 ml (16oz)
 drinkSizeLimit: 474
 
 [lights]
@@ -72,16 +71,9 @@ enabled: true
 audioDir: audio
 volumeFile: var/volume
 fileCheckInterval: 5
-phrasesMap: true
-purgePhrases: true
-inProcessTTS: false
-
-[googleTTS]
-googleApplicationCredentials: ~/.google/appCredentials.json
-languageCode: en-AU
-name: en-AU-Wavenet-A
-pitch: 0
-speakingRate: 1.2
+purgeClips: true
+inProcessTTS: true
+clipFormat: mp3
 
 [pumps]
 count: 16
