Added eventlet monkey patching, again.

--- a/server/etc/config-default.ini
+++ b/server/etc/config-default.ini
@@ -72,7 +72,7 @@ audioDir: audio
 volumeFile: var/volume
 fileCheckInterval: 5
 purgeClips: true
-inProcessTTS: true
+inProcessTTS: false
 clipFormat: mp3
 
 [pumps]
