Added reload and restart X commands

--- a/server/etc/config-default.ini
+++ b/server/etc/config-default.ini
@@ -25,6 +25,7 @@ configCheckInterval: 2
 [core]
 restartCommand: sudo shutdown -r now
 shutdownCommand: sudo shutdown -h now
+restartXCommand: sudo service lightdm restart
 shutdownTimer: 20
 maxDrinkOrderAge: 3600
 parentalCodeFile: var/parentalCode
@@ -50,6 +51,7 @@ microPrimeSmall: 2
 microPrimeLarge: 5
 defaultUnits: oz
 restartRequiresAdmin: false
+restartXRequiresAdmin: false
 shutdownRequiresAdmin: false
 settingsRequiresAdmin: false
 pumpSetupRequiresAdmin: false
@@ -79,7 +81,7 @@ count: 16
 cleanFactor: 1.5
 drainFactor: 1.2
 stepsPerML: 100
-speed: 15000
+speed: 12000
 acceleration: 7500
 ingredientEmptyAmount: 10
 1: 5
