Refactor and MakeMyOwn added

--- a/server/etc/config-default.ini
+++ b/server/etc/config-default.ini
@@ -27,8 +27,10 @@ restartCommand: sudo shutdown -r now
 shutdownCommand: sudo shutdown -h now
 restartXCommand: sudo service lightdm restart
 shutdownTimer: 20
-maxDrinkOrderAge: 3600
 parentalCodeFile: var/parentalCode
+
+[dispenser]
+maxDrinkOrderAge: 3600
 favoriteDrinkCount: 20
 drinkOrderCheckInterval: 5
 idleAudioInterval: 60
