--- a/server/etc/config-default.ini
+++ b/server/etc/config-default.ini
@@ -27,7 +27,6 @@ restartCommand: sudo shutdown -r now
 shutdownCommand: sudo shutdown -h now
 restartXCommand: sudo service lightdm restart
 shutdownTimer: 20
-parentalCodeFile: var/parentalCode
 
 [dispenser]
 maxDrinkOrderAge: 3600
@@ -35,6 +34,7 @@ favoriteDrinkCount: 20
 drinkOrderCheckInterval: 5
 idleAudioInterval: 60
 idleAudioChance: 0.3
+parentalCodeFile: var/parentalCode
 
 [wifi]
 interface: wlan0
@@ -56,7 +56,7 @@ restartRequiresAdmin: false
 restartXRequiresAdmin: false
 shutdownRequiresAdmin: false
 settingsRequiresAdmin: false
-pumpSetupRequiresAdmin: false
+dispenserSetupRequiresAdmin: true
 drinkSizeLimit: 474
 
 [lights]
@@ -86,6 +86,7 @@ stepsPerML: 100
 speed: 12000
 acceleration: 7500
 ingredientEmptyAmount: 10
+limitRunTime: 60
 1: 5
 2: 5
 3: 5
