Forget to return a config value to default

--- a/server/etc/config-default.ini
+++ b/server/etc/config-default.ini
@@ -56,7 +56,7 @@ restartRequiresAdmin: false
 restartXRequiresAdmin: false
 shutdownRequiresAdmin: false
 settingsRequiresAdmin: false
-dispenserSetupRequiresAdmin: true
+dispenserSetupRequiresAdmin: false
 drinkSizeLimit: 474
 
 [lights]
