Fixed restartX command

--- a/server/etc/config-default.ini
+++ b/server/etc/config-default.ini
@@ -25,7 +25,7 @@ configCheckInterval: 2
 [core]
 restartCommand: sudo shutdown -r now
 shutdownCommand: sudo shutdown -h now
-restartXCommand: sudo service lightdm restart
+restartXCommand: sudo systemctl restart display-manager
 shutdownTimer: 20
 
 [dispenser]
