Added configurable delay for restart and shutdown

--- a/server/etc/config-default.ini
+++ b/server/etc/config-default.ini
@@ -26,6 +26,8 @@ configCheckInterval: 2
 restartCommand: sudo shutdown -r now
 shutdownCommand: sudo shutdown -h now
 restartXCommand: sudo systemctl restart display-manager
+restartDelay: 5
+shutdownDelay: 5
 shutdownTimer: 20
 
 [dispenser]
