--- a/server/etc/config-default.ini
+++ b/server/etc/config-default.ini
@@ -84,7 +84,8 @@ clipFormat: mp3
 count: 16
 cleanFactor: 1.5
 drainFactor: 1.2
-stepsPerML: 100
+primeFactor: 0.8
+stepsPerML: 1582
 speed: 12000
 acceleration: 7500
 ingredientEmptyAmount: 10
