Replaced utils with more configurable units

--- a/server/etc/config-default.ini
+++ b/server/etc/config-default.ini
@@ -53,7 +53,6 @@ autoConsole: true
 isConsole: false
 microPrimeSmall: 2
 microPrimeLarge: 10
-defaultUnits: oz
 restartRequiresAdmin: false
 restartXRequiresAdmin: false
 shutdownRequiresAdmin: false
@@ -70,6 +69,14 @@ waitForDispensePattern: 1:2:3:4,1,2,0:0:30,0,20,7
 startDispensePattern:   0,3,5,0
 glassRemovedDispensePattern: 1:2:3:4,1,2,30:0:0,0,10,7
 endDispensePattern:     1:2:3:4,0,0:30:0,10,3
+
+[units]
+default: oz
+order: oz,ml,l,qt
+oz: 29.5735,1
+ml: 1,1
+l: 1000,3
+qt: 946.353,3
 
 [audio]
 enabled: true
