Done refactoring, added settings

--- a/server/etc/config-default.ini
+++ b/server/etc/config-default.ini
@@ -36,6 +36,7 @@ favoriteDrinkCount: 20
 drinkOrderCheckInterval: 5
 idleAudioInterval: 60
 idleAudioChance: 0.3
+; TODO: remove this
 parentalCodeFile: var/parentalCode
 
 [wifi]
@@ -47,28 +48,40 @@ wpaSupplicantFile: /etc/wpa_supplicant/wpa_supplicant.conf
 port: /dev/ttyACM0
 speed: 115200
 
-[client]
+[settings]
+settingsFile: var/settings.ini
+settingsCheckInterval: 5
+
 appTitle: Barbot
 autoConsole: true
 isConsole: false
-microPrimeSmall: 2
-microPrimeLarge: 10
 restartRequiresAdmin: false
 restartXRequiresAdmin: false
 shutdownRequiresAdmin: false
 settingsRequiresAdmin: false
 dispenserSetupRequiresAdmin: false
-drinkSizeLimit: 474
+enableIdleAudio: true
+enableLocalAudio: true
+enableRemoteAudio: true
+drinkSizeLimit: 475
+parentalCode:
+volume: 1.0
 
 [lights]
 enabled: true
-startupPattern:         1:2:3:4,1,2,30:30:30,0,20,7
-shutdownPattern:        1:2:3:4,1,2,30:30:30,0,20,7
-restartPattern:         1:2:3:4,1,2,30:30:30,0,20,7
-waitForDispensePattern: 1:2:3:4,1,2,0:0:30,0,20,7
-startDispensePattern:   0,3,5,0
-glassRemovedDispensePattern: 1:2:3:4,1,2,30:0:0,0,10,7
-endDispensePattern:     1:2:3:4,0,0:30:0,10,3
+startupPattern:                 1:2:3:4,1,2,80:80:80,0,20,7
+shutdownPattern:                1:2:3:4,1,2,80:80:80,0,20,7
+restartPattern:                 1:2:3:4,1,2,80:80:80,0,20,7
+waitForDispensePattern:         1:2:3:4,1,2,0:0:80,0,20,7
+startDispensePattern:           0,3,5,0
+glassRemovedDispensePattern:    1:2:3:4,1,2,80:0:0,0,10,7
+endDispensePattern:             1:2:3:4,0,0:80:0,10,3
+
+manualDispenseIdlePattern:      1:2:3:4,0,80:80:80,10,3
+manualDispensePattern:          0,3,5,0
+
+setupDispenseIdlePattern:       1:2:3:4,0,80:80:80,10,3
+setupDispensePattern:           0,3,5,0
 
 [units]
 default: oz
@@ -81,6 +94,7 @@ qt: 946.353,3
 [audio]
 enabled: true
 audioDir: audio
+; TODO: remove this
 volumeFile: var/volume
 fileCheckInterval: 5
 purgeClips: true
