--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vue-socket.io-extended": "^3.1.0",
+    "vuedraggable": "^2.17.0",
     "vuetify": "^1.0.19",
     "vuex": "^3.0.1"
   },
