--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,9 @@
     "@vue/cli-plugin-babel": "^3.0.1",
     "@vue/cli-plugin-eslint": "^3.0.1",
     "@vue/cli-service": "^3.0.1",
+    "git-revision-webpack-plugin": "^3.0.3",
     "vue-cli-plugin-vuetify": "^0.1.6",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.5.17",
+    "webpack-plugin-replace": "^1.1.1"
   }
 }
