--- a/server/etc/config-default.ini
+++ b/server/etc/config-default.ini
@@ -85,11 +85,14 @@ setupDispensePattern:           0,3,5,0
 
 [units]
 default: oz
-order: oz,ml,l,qt
+order: oz,ml,l,qt,tsp,tbsp
+# name: ml,precision
 oz: 29.5735,1
 ml: 1,1
 l: 1000,3
 qt: 946.353,3
+tsp: 4.93,1
+tbsp: 14.787,1
 
 [audio]
 enabled: true
