Added diskFree to statistics

--- a/server/etc/config-default.ini
+++ b/server/etc/config-default.ini
@@ -23,6 +23,8 @@ socketIODebug: false
 configCheckInterval: 2
 
 [core]
+diskFreeCommand: df --output=pcent {}
+diskFreePath: var
 restartCommand: sudo shutdown -r now
 shutdownCommand: sudo shutdown -h now
 restartXCommand: sudo systemctl restart display-manager
