--- a/server/etc/config-default.ini
+++ b/server/etc/config-default.ini
@@ -38,8 +38,6 @@ favoriteDrinkCount: 20
 drinkOrderCheckInterval: 5
 idleAudioInterval: 60
 idleAudioChance: 0.3
-; TODO: remove this
-parentalCodeFile: var/parentalCode
 
 [wifi]
 interface: wlan0
@@ -71,19 +69,22 @@ volume: 1.0
 
 [lights]
 enabled: true
-startupPattern:                 1:2:3:4,1,2,80:80:80,0,20,7
-shutdownPattern:                1:2:3:4,1,2,80:80:80,0,20,7
-restartPattern:                 1:2:3:4,1,2,80:80:80,0,20,7
-waitForDispensePattern:         1:2:3:4,1,2,0:0:80,0,20,7
-startDispensePattern:           0,3,5,0
-glassRemovedDispensePattern:    1:2:3:4,1,2,80:0:0,0,10,7
-endDispensePattern:             1:2:3:4,0,0:80:0,10,3
+startupPattern:                 1:2:3:4,1,2,60:60:60,0,20,7
+shutdownPattern:                1:2:3:4,1,2,60:60:60,0,20,7
+restartPattern:                 1:2:3:4,1,2,60:60:60,0,20,7
+waitForDispensePattern:         1:2:3:4,1,2,0:0:60,0,20,7
+#startDispensePattern:           0,3,5,0
+startDispensePattern:           1:2:3:4,1,2,60:60:0,0,5,7
+glassRemovedDispensePattern:    1:2:3:4,1,2,60:0:0,0,10,7
+endDispensePattern:             1:2:3:4,0,0:60:0,10,3
 
-manualDispenseIdlePattern:      1:2:3:4,0,80:80:80,10,3
-manualDispensePattern:          0,3,5,0
+manualDispenseIdlePattern:      1:2:3:4,0,60:60:60,10,3
+#manualDispensePattern:          0,3,5,0
+manualDispensePattern:          1:2:3:4,1,2,60:60:0,0,5,7
 
-setupDispenseIdlePattern:       1:2:3:4,0,80:80:80,10,3
-setupDispensePattern:           0,3,5,0
+setupDispenseIdlePattern:       1:2:3:4,0,60:60:60,10,3
+#setupDispensePattern:           0,3,5,0
+setupDispensePattern:           1:2:3:4,1,2,60:0:60,0,10,7
 
 [units]
 default: oz
@@ -116,19 +117,36 @@ speed: 12000
 acceleration: 7500
 ingredientEmptyAmount: 10
 limitRunTime: 60
-1: 36
-2: 38.8
-3: 37.7
-4: 38.5
-5: 37.7
-6: 41.3
-7: 41.9
-8: 41.5
-9: 37.4
-10: 38.1
-11: 37.2
-12: 39
-13: 37.9
-14: 40.3
-15: 41
-16: 41.9
+1: 17
+2: 19.3
+3: 18.2
+4: 19
+5: 18.2
+6: 21.8
+7: 22.4
+8: 22
+9: 17.9
+10: 18.6
+11: 17.7
+12: 19.5
+13: 18.4
+14: 20.8
+15: 21.5
+16: 22.4
+#1: 36
+#2: 38.8
+#3: 37.7
+#4: 38.5
+#5: 37.7
+#6: 41.3
+#7: 41.9
+#8: 41.5
+#9: 37.4
+#10: 38.1
+#11: 37.2
+#12: 39
+#13: 37.9
+#14: 40.3
+#15: 41
+#16: 41.9
+
