Disabled some light patterns until power down issue is resolved

--- a/server/etc/config-default.ini
+++ b/server/etc/config-default.ini
@@ -72,19 +72,29 @@ enabled: true
 startupPattern:                 1:2:3:4,1,2,60:60:60,0,20,7
 shutdownPattern:                1:2:3:4,1,2,60:60:60,0,20,7
 restartPattern:                 1:2:3:4,1,2,60:60:60,0,20,7
-waitForDispensePattern:         1:2:3:4,1,2,0:0:60,0,20,7
+#waitForDispensePattern:         1:2:3:4,1,2,0:0:60,0,20,7
 #startDispensePattern:           0,3,5,0
-startDispensePattern:           1:2:3:4,1,2,60:60:0,0,5,7
-glassRemovedDispensePattern:    1:2:3:4,1,2,60:0:0,0,10,7
-endDispensePattern:             1:2:3:4,0,0:60:0,10,3
+#glassRemovedDispensePattern:    1:2:3:4,1,2,60:0:0,0,10,7
+#endDispensePattern:             1:2:3:4,0,0:60:0,10,3
 
-manualDispenseIdlePattern:      1:2:3:4,0,60:60:60,10,3
+#manualDispenseIdlePattern:      1:2:3:4,0,60:60:60,10,3
 #manualDispensePattern:          0,3,5,0
-manualDispensePattern:          1:2:3:4,1,2,60:60:0,0,5,7
 
-setupDispenseIdlePattern:       1:2:3:4,0,60:60:60,10,3
+#setupDispenseIdlePattern:       1:2:3:4,0,60:60:60,10,3
 #setupDispensePattern:           0,3,5,0
-setupDispensePattern:           1:2:3:4,1,2,60:0:60,0,10,7
+
+
+waitForDispensePattern:
+startDispensePattern:
+glassRemovedDispensePattern:
+endDispensePattern:
+
+manualDispenseIdlePattern:
+manualDispensePattern:
+
+setupDispenseIdlePattern:
+setupDispensePattern:
+
 
 [units]
 default: oz
@@ -100,8 +110,6 @@ tbsp: 14.787,1
 [audio]
 enabled: true
 audioDir: audio
-; TODO: remove this
-volumeFile: var/volume
 fileCheckInterval: 5
 purgeClips: true
 inProcessTTS: false
@@ -133,20 +141,4 @@ limitRunTime: 60
 14: 20.8
 15: 21.5
 16: 22.4
-#1: 36
-#2: 38.8
-#3: 37.7
-#4: 38.5
-#5: 37.7
-#6: 41.3
-#7: 41.9
-#8: 41.5
-#9: 37.4
-#10: 38.1
-#11: 37.2
-#12: 39
-#13: 37.9
-#14: 40.3
-#15: 41
-#16: 41.9
 
