Added idle light pattern, reenabled disabled patterns for testing

--- a/server/etc/config-default.ini
+++ b/server/etc/config-default.ini
@@ -69,31 +69,33 @@ volume: 1.0
 
 [lights]
 enabled: true
-startupPattern:                 1:2:3:4,1,2,60:60:60,0,20,7
-shutdownPattern:                1:2:3:4,1,2,60:60:60,0,20,7
-restartPattern:                 1:2:3:4,1,2,60:60:60,0,20,7
-#waitForDispensePattern:         1:2:3:4,1,2,0:0:60,0,20,7
-#startDispensePattern:           0,3,5,0
-#glassRemovedDispensePattern:    1:2:3:4,1,2,60:0:0,0,10,7
-#endDispensePattern:             1:2:3:4,0,0:60:0,10,3
+startupPattern:                 1:2:3:4,0,2,60:60:60,0,20,7
+shutdownPattern:                1:2:3:4,0,2,60:60:60,0,20,7
+restartPattern:                 1:2:3:4,0,2,60:60:60,0,20,7
+idlePattern:                    1:2:3:4,0,1,60:60:06,20,3
 
-#manualDispenseIdlePattern:      1:2:3:4,0,60:60:60,10,3
-#manualDispensePattern:          0,3,5,0
+waitForDispensePattern:         1:2:3:4,0,2,0:0:60,0,20,7
+startDispensePattern:           0,2,5,0
+glassRemovedDispensePattern:    1:2:3:4,0,2,60:0:0,0,10,7
+endDispensePattern:             1:2:3:4,0,1,0:60:0,10,3
 
-#setupDispenseIdlePattern:       1:2:3:4,0,60:60:60,10,3
-#setupDispensePattern:           0,3,5,0
+manualDispenseIdlePattern:      1:2:3:4,0,1,60:60:60,10,3
+manualDispensePattern:          0,2,5,0
 
+setupDispenseIdlePattern:       1:2:3:4,0,1,60:60:60,10,3
+setupDispensePattern:           0,2,5,0
 
-waitForDispensePattern:
-startDispensePattern:
-glassRemovedDispensePattern:
-endDispensePattern:
+#idlePattern:
+#waitForDispensePattern:
+#startDispensePattern:
+#glassRemovedDispensePattern:
+#endDispensePattern:
 
-manualDispenseIdlePattern:
-manualDispensePattern:
+#manualDispenseIdlePattern:
+#manualDispensePattern:
 
-setupDispenseIdlePattern:
-setupDispensePattern:
+#setupDispenseIdlePattern:
+#setupDispensePattern:
 
 
 [units]
